# quill

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: workflow.json
.claude/agents/: planner.md  reviewer.md
.claude/plans/: bleed-single-source.md  cff-font-embedding.md  cmyk-jpeg-input.md  docs-m0-complete-status.md  enter-m1-shaping-arc.md  hyphenation-hypher-enus.md  hyphenation-penalty-seam.md  image-sizing.md  jpeg-proxy-pixels.md  knuth-plass-increment-1.md  kp-justified-rendering.md  multi-column-thread.md  png-normalization.md  png-proxy-pixels.md  proxy-cache-from-assets.md  proxy-cache-invalidation.md  runmetrics-seam.md  rustybuzz-shaper.md  text-frame-threading.md  text-frames-seam.md  text-metrics-width-breaking.md
.claude/skills/advance/: SKILL.md  SPEC.md
.claude/skills/handoff/: SKILL.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/color/: Cargo.toml
crates/color/src/: lib.rs
crates/components-ttrpg/: Cargo.toml
crates/components-ttrpg/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/export-pdf/: Cargo.toml
crates/export-pdf/src/: fonts.rs  geom.rs  hyphenate.rs  icc.rs  images.rs  lib.rs  writer.rs  xmp.rs
crates/layout-engine/: Cargo.toml
crates/layout-engine/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/text-layout/: Cargo.toml
crates/text-layout/src/: lib.rs
docs/: format-spec.md
specs/: 0001-pdf-x-export.md  0002-pdf-byte-generation.md  0003-pdf-x3-output.md  0004-user-font-embedding.md  0005-color-cmyk-images.md  0006-image-ink-clamping.md  0007-preflight-marks-transparency.md  0008-jpeg-image-input.md  0009-image-sizing.md  0010-png-normalization.md  0011-cff-font-embedding.md  0012-cmyk-jpeg-input.md  0013-bleed-single-source.md  0015-text-metrics-line-breaking.md  0016-rustybuzz-shaping.md  0017-knuth-plass-line-breaking.md  0018-hyphenation.md  0019-text-frames-threading.md  0020-multi-column-thread.md  0021-png-proxy-pixels.md  0022-jpeg-proxy-pixels.md  0023-proxy-cache-from-assets.md  0024-proxy-cache-invalidation.md  README.md
