[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WilderSelf/quill"
authors = ["Daniel Foster <danielfoster25@gmail.com>"]
rust-version = "1.75"

# Shared dependency versions. Remaining heavy native-backed crates (skia-safe, rustybuzz,
# egui, ...) are intentionally NOT added yet — they arrive in later spec-driven commits so
# the scaffold stays fast to build. The PDF/X export stack below landed with spec 0002.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# PDF/X-1a export stack (spec 0002). subsetter and ttf-parser MUST resolve to a single
# ttf-parser version (Identity-H GID preservation depends on it) — checked by `cargo tree -d`.
pdf-writer = "0.15"
subsetter = "0.2"
ttf-parser = "0.25"
# rustybuzz 0.20 pins ttf-parser 0.25 — the SAME version subsetter needs (checked by cargo tree -d).
# Shapes runs for kerning/ligature-aware measurement (spec 0016); permissive (MIT/Apache-2.0).
rustybuzz = "0.20"
lcms2 = "6"
png = "0.18"
# default-features off drops the rayon parallel-decode path — the export decode loop is already
# fanned out per-asset and rayon would bloat the dep graph for no win at our image sizes.
jpeg-decoder = { version = "0.3", default-features = false }
flate2 = "1"

# Internal crates (path deps within the workspace).
quill-core-model = { path = "crates/core-model" }
quill-text-layout = { path = "crates/text-layout" }
quill-layout-engine = { path = "crates/layout-engine" }
quill-color = { path = "crates/color" }
quill-render = { path = "crates/render" }
quill-export-pdf = { path = "crates/export-pdf" }
quill-components-ttrpg = { path = "crates/components-ttrpg" }

[profile.release]
lto = "thin"
