[package]
name = "quill-export-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# PDF/X-1a byte generation (spec 0002): pdf-writer emits the object graph, subsetter+ttf-parser
# embed a subset TrueType font, lcms2 validates/synthesizes the ICC OutputIntent, png+flate2
# handle image XObjects. See specs/0002-pdf-byte-generation.md.
[dependencies]
quill-core-model = { workspace = true }
quill-color = { workspace = true }
quill-layout-engine = { workspace = true }
thiserror = { workspace = true }
pdf-writer = { workspace = true }
subsetter = { workspace = true }
ttf-parser = { workspace = true }
lcms2 = { workspace = true }
png = { workspace = true }
flate2 = { workspace = true }
