[package]
name = "quill-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The GPU canvas (`skia-safe`, evaluating `vello`) arrives in a later spec-driven commit.
[dependencies]
# Screen-proxy decode reuses the workspace's existing targeted decoders (specs 0021 PNG / 0022 JPEG)
# rather than the umbrella `image` crate, keeping the dep graph minimal and permissive (MIT/Apache).
png = { workspace = true }
jpeg-decoder = { workspace = true }
